--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         </nav>
     </header>
 
-    <div class="ikincidiv" id="home">
+    <section class="section__home" id="home">
         <div class="span1">
             <div class="span1ic">
                 <span class="join">Join Meet Up</span>
             </div>
             <span class="weare">We are coming to Singapore.Learn more...</span>
         </div>
-        <span class="serve">Serve Your <br> Website Fast </p>
+        <span class="home__title">Serve Your <br> Website Fast </p>
             <div class="test">
                 <input type="text" placeholder="Email Adres" class="input1">
                 <button class="get">Get Stared</button>
@@ -39,7 +39,7 @@
             <div class="credit">
                 <span>No credit card required</span>
             </div>
-    </div>
+    </section>
     <div class="three" id="features">
         <div class="threeic">
             <div class="threeic1">
